scrollbar bug on contacts table fields

--- a/app/stylesheets/routes/_new_addressbook.scss
+++ b/app/stylesheets/routes/_new_addressbook.scss
@@ -497,6 +497,10 @@
       display: inline;
       width: 100%;
 
+      a::-webkit-scrollbar {
+        display: none !important;
+      }
+
       &.is-saving {
         color: #fff;
       }
